change lora config for second training with epoch 2. finetuning done

--- a/training.ipynb
+++ b/training.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -599,14 +599,14 @@
     "print(f\"Before adding LoRA, All Params: {model.num_parameters()}\")\n",
     "\n",
     "lora_config = configure_lora(16, 32, 0.1, \"SEQ_2_SEQ_LM\", \"lora_only\", [\"q_proj\", \"k_proj\", \"v_proj\"])\n",
-    "model = get_peft_model(model, lora_config)\n",
+    "lora_model = get_peft_model(model, lora_config)\n",
     "get_trainable_parameters(model)\n",
     "\n",
     "# define training arguments and trainer\n",
     "training_args = train_args(\"./results/train/epoch2\", \"epoch\", 5e-5, 16, 2, 2, 1000, \"./logs\", 500, 2)\n",
     "train_dataset_tokenized = train_dataset_tokenized.with_transform(move_to_device)\n",
     "val_dataset_tokenized = val_dataset_tokenized.with_transform(move_to_device)\n",
-    "train_trainer = trainer_train(model, training_args, train_dataset_tokenized, val_dataset_tokenized, tokenizer)\n",
+    "train_trainer = trainer_train(lora_model, training_args, train_dataset_tokenized, val_dataset_tokenized, tokenizer)\n",
     "\n",
     "# train the model\n",
     "\n",
@@ -614,7 +614,7 @@
     "train_trainer.train()\n",
     "\n",
     "# save the model\n",
-    "model.save_pretrained(\"./finetuned/epoch2\")\n",
+    "lora_model.save_pretrained(\"./finetuned/epoch2\")\n",
     "tokenizer.save_pretrained(\"./finetuned/epoch2\")"
    ]
   }
