--- a/training.ipynb
+++ b/training.ipynb
@@ -617,6 +617,23 @@
     "lora_model.save_pretrained(\"./finetuned/epoch2\")\n",
     "tokenizer.save_pretrained(\"./finetuned/epoch2\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# after finetuning, merge LoRA weights into the model\n",
+    "print(\"Merging LoRA weights into the base model...\")\n",
+    "lora_model.merge_lora_weights()\n",
+    "\n",
+    "# save the model with merged weights\n",
+    "lora_model.save_pretrained(\"./finetuned_merged_model/\")\n",
+    "\n",
+    "# print the number of parameters after merging\n",
+    "print(f\"Model parameters after merging: {lora_model.num_parameters()}\")"
+   ]
   }
  ],
  "metadata": {
