--- a/local_lora_finetuning.ipynb
+++ b/local_lora_finetuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,6 @@
     "device = torch.device(\"mps\")\n",
     "\n",
     "import evaluate\n",
-    "import sacrebleu\n",
     "from tqdm import tqdm\n",
     "\n",
     "from datasets import Dataset\n",
@@ -603,7 +602,7 @@
     "get_trainable_parameters(model)\n",
     "\n",
     "# define training arguments and trainer\n",
-    "training_args = train_args(\"./results/train/epoch2\", \"epoch\", 5e-5, 16, 2, 2, 1000, \"./logs\", 500, 2)\n",
+    "training_args = train_args(\"./results/train/epoch2\", \"epoch\", 5e-5, 16, 2, 2, 1000, \"./logs/train/\", 500, 2)\n",
     "train_dataset_tokenized = train_dataset_tokenized.with_transform(move_to_device)\n",
     "val_dataset_tokenized = val_dataset_tokenized.with_transform(move_to_device)\n",
     "train_trainer = trainer_train(lora_model, training_args, train_dataset_tokenized, val_dataset_tokenized, tokenizer)\n",
