--- a/push_models.ipynb
+++ b/push_models.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model 1: Finetuned Helsinki-NLP/opus-mt-en-hi\n",
+    "### Model 1: Finetuned Helsinki-NLP/opus-mt-en-hi Locally\n",
     "\n",
     "Details\n",
     "\n",
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model 2: Finetuned Helsinki-NLP/opus-mt-en-hi\n",
+    "### Model 2: Finetuned Helsinki-NLP/opus-mt-en-hi Locally\n",
     "\n",
     "Details\n",
     "\n",
@@ -234,11 +234,108 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Model 5: Finetuned Helsinki-NLP/opus-mt-en-hi on Kaggle\n",
+    "\n",
+    "Details\n",
+    "\n",
+    "- finetuned using free GPUs on Kaggle for 5 epoch\n",
+    "- finetuned on BPCC English-Maithili Gen dataset: 60K training examples\n",
+    "- Epoch: 5\n",
+    "- finetuning time: 1 hr+\n",
+    "- Inference time (test split): 5 mins\n",
+    "- chrf++ score on test split: 34.76\n",
+    "- Inference time (IN22 Gen: 1024 examples): 3 mins\n",
+    "- chrf++ score on IN22 Eng-Mai benchmark: 28.2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter size: 76381184\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load the model and tokenizer\n",
+    "model_path = \"./finetuned/epoch5\"\n",
+    "finetuned_tokenizer = AutoTokenizer.from_pretrained(model_path)\n",
+    "finetuned_model = AutoModelForSeq2SeqLM.from_pretrained(model_path)\n",
+    "print(\"Parameter size:\", finetuned_model.num_parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "73d6d2b7cf1c4bcd883dc202d2d0f9b3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/304M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1a73cc09ef014d0ca831fe1fa43b463f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md:   0%|          | 0.00/5.17k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a185187391a14d76826e9f87b2cd598e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "target.spm:   0%|          | 0.00/1.07M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/kubershahi/Helsinki-NLP-opus-mt-eng-mai-epoch5/commit/3755ef0fd82747f48ff88646d555232f5e7b2945', commit_message='Upload tokenizer', commit_description='', oid='3755ef0fd82747f48ff88646d555232f5e7b2945', pr_url=None, repo_url=RepoUrl('https://huggingface.co/kubershahi/Helsinki-NLP-opus-mt-eng-mai-epoch5', endpoint='https://huggingface.co', repo_type='model', repo_id='kubershahi/Helsinki-NLP-opus-mt-eng-mai-epoch5'), pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repo_name = \"Helsinki-NLP-opus-mt-eng-mai-epoch5\"\n",
+    "create_repo(repo_name)\n",
+    "finetuned_model.push_to_hub(repo_name)\n",
+    "finetuned_tokenizer.push_to_hub(repo_name)"
+   ]
   }
  ],
  "metadata": {
